# posts

./: .env  Cargo.toml  README.md
migrations/2025-10-27-215330-0000_create_comments/: up.sql
migrations/2025-10-27-215330-0000_create_follows/: down.sql  up.sql
migrations/2025-10-27-215330-0000_create_interactions/: up.sql
migrations/2025-10-27-215330-0000_create_users/: up.sql
migrations/2025-10-27-215617-0000_create_posts/: up.sql
src/: auth.rs  database.rs  handlers.rs  main.rs  models.rs  schema.rs
